--- a/src/components/NextWeekCards/NextWeekCard/NextWeekCard.module.css
+++ b/src/components/NextWeekCards/NextWeekCard/NextWeekCard.module.css
@@ -39,3 +39,67 @@ body {
     height: 90px;
     width: 90px;
 }
+
+.openForecastButton{
+
+    border-radius: 100px;
+    margin-top: 10px;
+
+    transition-duration: 0.5s;
+    transform: rotate(0deg);
+}
+
+.closeForecastButton{
+
+    margin-top: 10px;
+    transition-duration: 0.5s;
+    transform: rotate(180deg);
+}
+
+
+.openForecast{
+    opacity: 1;
+    transition-duration: 0.5s;
+}
+.closeForecast{
+    opacity: 0;
+    overflow: hidden;
+    transition-duration: 0.5s;
+}
+
+.hourlyWeatherWrapper{
+    padding: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
+    width: 200px;
+    margin: 10px;
+    justify-content: center;
+    flex-direction: column;
+    justify-content: center;
+    border: 1px solid #afafaf;
+    border-radius: 5px;
+    color: #343434;
+    font-weight: 600;
+    size: 16px;
+}
+
+.temperature{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-weight: 700;
+    color: black;
+    margin-top: 5px;
+    font-size: 18px;
+    margin-bottom: 5px;
+
+}
+
+.smallImage{
+
+    width: 75px;
+    height: 75px;
+    margin-left: auto;
+    margin-right: auto;
+}
