--- a/src/components/main_content/MainContent.module.css
+++ b/src/components/main_content/MainContent.module.css
@@ -3,11 +3,13 @@
 body {
     font-family: 'Nunito', sans-serif;
 }
+
 #title{
     font-size: 68px;
     font-weight: 200;
     color: #1f1f1f;
     margin-top: 30px;
+    margin-left:20px;
 }
 
 #date{
