--- a/src/components/NextWeekCards/NextWeekCard/NextWeekCard.module.css
+++ b/src/components/NextWeekCards/NextWeekCard/NextWeekCard.module.css
@@ -44,13 +44,13 @@ body {
 
     border-radius: 100px;
     margin-top: 10px;
-
+    cursor: pointer;
     transition-duration: 0.5s;
     transform: rotate(0deg);
 }
 
 .closeForecastButton{
-
+    cursor: pointer;
     margin-top: 10px;
     transition-duration: 0.5s;
     transform: rotate(180deg);
